--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "nuxt": "^2.14.3",
-    "vue-pdf": "^4.1.0"
+    "nuxt": "^2.14.3"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.0.2",
